--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,8 @@
 {
+  "engines": {
+    "node": "22.14.0",
+    "npm": "10.x"
+  },
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
