--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,8 @@ services:
   - type: web
     name: docplus
     env: node
+    runtime: node
+    runtimeVersion: "22.14.0"
     buildCommand: |
       npm install
       cd frontend
