--- a/new-backend/vercel.json
+++ b/new-backend/vercel.json
@@ -1,15 +1,22 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "*.js",
-        "use": "@vercel/node"
-      }
+        {
+            "src": "server.js",
+            "use": "@vercel/node"
+        }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
-    ]
+        {
+            "src": "/api/(.*)",
+            "dest": "server.js"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "server.js"
+        }
+    ],
+    "env": {
+        "NODE_ENV": "production"
+    }
 }
