Fix Vercel deployment

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,22 @@
 {
-    "rewrites":[{
-        "source": "/(.*)",
-        "destination": "/index.html"
-    }]
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "vite.config.js",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "dist"
+        }
+      }
+    ],
+    "routes": [
+      {
+        "src": "/api/(.*)",
+        "dest": "https://docplus-backend-ruby.vercel.app/api/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/index.html"
+      }
+    ]
+  }
