--- a/render.yaml
+++ b/render.yaml
@@ -43,5 +43,5 @@ services:
         sync: false
       - key: JWT_SECRET
         sync: false
-      - key: BASE_URL
+      - key: VITE_BACKEND_URL
         sync: false
