--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -5,7 +5,8 @@
         "src": "package.json",
         "use": "@vercel/static-build",
         "config": {
-          "distDir": "dist"
+          "distDir": "dist",
+          "clean": true
         }
       }
     ],
@@ -16,8 +17,14 @@
       },
       {
         "src": "/(.*)",
-        "dest": "/index.html",
+        "dest": "/",
         "status": 200
+      },
+      {
+        "src": "/assets/(.*)",
+        "headers": {
+          "Cache-Control": "public, max-age=31536000, immutable"
+        }
       }
     ]
   }
