--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,30 +1,19 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "dist",
-          "clean": true
-        }
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "https://docplus-backend-ruby.vercel.app/api/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/",
-        "status": 200
-      },
-      {
-        "src": "/assets/(.*)",
-        "headers": {
-          "Cache-Control": "public, max-age=31536000, immutable"
-        }
-      }
-    ]
-  }
+  "version": 2,
+  "framework": "vite",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "https://docplus-backend-ruby.vercel.app/api/$1"
+    },
+    {
+      "handle": "filesystem"
+    },
+    {
+      "src": "/.*",
+      "dest": "/index.html"
+    }
+  ]
+}
