--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -6,7 +6,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "http://localhost:3000//api/$1"
+      "dest": "https://docplus-backend-ruby.vercel.app//api/$1"
     },
     {
       "handle": "filesystem"
